# OS-Labs

I am TicTok killer/Killer linux/: killer.cpp  user.cpp
I am TicTok killer/Killer windows/: killer.cpp  user.cpp
OS-Lab1 linux/Number/: CMakeLists.txt  Number.cpp
OS-Lab1 linux/Vector/: CMakeLists.txt  Vector.cpp
OS-Lab1 linux/test/: CMakeLists.txt  main.cpp
OS-Lab1/Number/: Number.sln
OS-Lab1/Number/Number/: Number.cpp  Number.vcxproj  Number.vcxproj.filters
OS-Lab1/Number/Output/: Number.idb  Number.lib
OS-Lab1/Vector/: Vector.sln
OS-Lab1/Vector/Output/: Vector.exp  Vector.lib
OS-Lab1/Vector/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
OS-Lab1/test/: test.sln
OS-Lab1/test/test/: maiun.cpp  test.vcxproj  test.vcxproj.filters
OS-Lab2 linux/: Test  main  script.sh
OS-Lab2 linux/Number/: Number.h
OS-Lab2 linux/Vector/: Vector.cpp  Vector.h
OS-Lab2 linux/test/: main.cpp
Pipes Linux/A/: main.cpp
Pipes Windows/A/: A.cpp
Pipes Windows/M/: M.cpp
Pipes Windows/P/: P.cpp
Pipes Windows/Pipes/: Pipes.cpp
Pipes Windows/S/: S.cpp
matrix(Windows and Linux)/: linux.cpp  windows.cpp
